--- a/project.html
+++ b/project.html
@@ -207,7 +207,7 @@
     vegaEmbed('#chart31', myChart31);
     //vegaEmbed('#chart32', myChart32);
     vegaEmbed('#chart33', myChart33);
-    vegaEmbed('#chart34', myChart34);
+    //vegaEmbed('#chart34', myChart34);
     vegaEmbed('#chart35', myChart35);
     //vegaEmbed('#chart36', myChart36);
     //vegaEmbed('#chart37', myChart37);
