--- a/project.html
+++ b/project.html
@@ -186,7 +186,7 @@
 <script>
 
     //Define charts:
-    var myChart31 = "lifecyclefinished.json";
+    var myChart31 = "LIFECYCLE.json";
     //var myChart32 = "PROJECTannualcarbonlinechart.json";
     var myChart33 = "deathchart.json";
     //var myChart34 = "lifecycleandcost.json";
