--- a/portfolio.html
+++ b/portfolio.html
@@ -112,6 +112,7 @@
       <div class="myWeek8">
         <h3> Week 8: Festival of Economics </h3>
         <div class="chart" id="chart20"></div>
+        <div class="chart" id="chart18"></div>
         <p> I went to thissssss talk and they said this.</p>
         <p> here are my graphs and this is what they say </p>
 
@@ -153,8 +154,8 @@
       var myChart14 = "MM9F.json"
       var myChart15 = "NMBY.json"
       var myChart16 = "NZGF.json"
-      //var myChart17 = "visualization.vg (1).json"
-      //var myChart18 = "PROJECTannualcarbonlinechart.json"
+      var myChart17 = "choroplethfixlegend.json"
+      var myChart18 = "week8linegraph.json"
       //var myChart19 = "choroplethfixlegend.json"
       var myChart20 = "week8completed.json"
       var myChart21 = "trellis.json"
@@ -180,8 +181,8 @@
       vegaEmbed('#chart14', myChart14)
       vegaEmbed('#chart15', myChart15)
       vegaEmbed('#chart16', myChart16)
-      //vegaEmbed('#chart17', myChart17)
-      // vegaEmbed('#chart18', myChart18)
+      vegaEmbed('#chart17', myChart17)
+      vegaEmbed('#chart18', myChart18)
       // vegaEmbed('#chart19', myChart19)
       vegaEmbed('#chart20', myChart20)
       vegaEmbed('#chart21', myChart21)
