--- a/portfolio.html
+++ b/portfolio.html
@@ -129,6 +129,7 @@
       <div class="myWeek10">
         <h3> Week 10/11: Machine Learning </h3>
         <img src="https://raw.githubusercontent.com/theagegeshidze/theagegeshidze.github.io/main/firstregression.png" alt="Matrix" height = 500px width = 500px/>
+        <img src="https://raw.githubusercontent.com/theagegeshidze/theagegeshidze.github.io/main/heatmap.png" alt="Matrix" height = 500px width = 400px/>
         <p> Here are my learning machines.</p>
         <p> they are very very advanced </p>
 
