--- a/portfolio.html
+++ b/portfolio.html
@@ -103,8 +103,8 @@
 
       <div class="myWeek7">
         <h3> Week 7 : Two maps: a base map and a choropleth </h3>
-        <div class="chart" id="chart17"></div>
-        <iframe width=500 height=500 src="kepler.gl.html"></iframe>
+        <div class="chart" id="chart22"></div>
+        <div class="chart" id="chart23"></div>
         <p> How much carbon each country globally has emmitted (metric tonnes)</p>
       </div>
 
@@ -162,8 +162,8 @@
       //var myChart19 = "choroplethfixlegend.json"
       var myChart20 = "week8completed.json"
       var myChart21 = "trellis.json"
-      // var myChart22 = "kepler.gl.html"
-      // var myChart23 = "kepler.json"
+      var myChart22 = "africachoropleth.json"
+      var myChart23 = "africabasemap.json"
       //var myChart24 = "MM9F.json"
 
 
@@ -189,8 +189,8 @@
       // vegaEmbed('#chart19', myChart19)
       vegaEmbed('#chart20', myChart20)
       vegaEmbed('#chart21', myChart21)
-      // vegaEmbed('#chart22', myChart22)
-      // vegaEmbed('#chart23', myChart23)
+      vegaEmbed('#chart22', myChart22)
+      vegaEmbed('#chart23', myChart23)
       // vegaEmbed('#chart24', myChart24)
 
     </script>
