--- a/carbondashboard.html
+++ b/carbondashboard.html
@@ -35,11 +35,11 @@
       <p>Click on a country to see its trends by year.</p>
     </div>
     <section class="container">
-      <div class="chart-container">
+      <div class="chart-container left">
         <svg
           version="1.1"
           baseProfile="full"
-          xmlns="http://www.w3.org/2000/svg"
+          xmlns="https://www.w3.org/TR/SVG/"
           id="map"
         ></svg>
       </div>
@@ -47,13 +47,7 @@
         <svg
           version="1.1"
           baseProfile="full"
-          xmlns="http://www.w3.org/2000/svg"
-          id="pie"
-        ></svg>
-        <svg
-          version="1.1"
-          baseProfile="full"
-          xmlns="http://www.w3.org/2000/svg"
+          xmlns="https://www.w3.org/TR/SVG/"
           id="bar"
         ></svg>
       </div>
