--- a/carbondashboard.html
+++ b/carbondashboard.html
@@ -39,7 +39,7 @@
         <svg
           version="1.1"
           baseProfile="full"
-          xmlns="https://www.w3.org/TR/SVG/"
+          xmlns="http://www.w3.org/2000/svg"
           id="map"
         ></svg>
       </div>
@@ -47,7 +47,7 @@
         <svg
           version="1.1"
           baseProfile="full"
-          xmlns="https://www.w3.org/TR/SVG/"
+          xmlns="http://www.w3.org/2000/svg"
           id="bar"
         ></svg>
       </div>
