--- a/project.html
+++ b/project.html
@@ -135,6 +135,7 @@
         In theory, both are capable of replacing fossil fuels, but not without research, development and inevitable challenges.
 
         </p>
+     <div class="chart" id="chart36"> </div>
      </div>
      
    <div class="Stability">
