--- a/project.html
+++ b/project.html
@@ -148,6 +148,8 @@
         Storage and hybridisation also requires very expensive infrastructure. Whilst renewables are variable, nuclear power is much more stable and
         will have no trouble supplying constant power. Nuclear provides considerably more stability.
         </p>
+       
+       <div class="chart" id="chart37"> </div>
 
        </div>
        
@@ -192,7 +194,7 @@
     var myChart34 = "lifecyclefinished.json";
     var myChart35 = "electricitymixpiechart.json";
     var myChart36 = "scrapedweek4.json";
-    //var myChart37 = "Transfers.json";
+    var myChart37 = "projectstacked.json";
     //var myChart38 = "BKST.json";
     //var myChart39 = "data_ONS-CUDG.json";
     //var myChart40 = "data_ONS-CUKY.json";
@@ -210,7 +212,7 @@
     vegaEmbed('#chart34', myChart34);
     vegaEmbed('#chart35', myChart35);
     vegaEmbed('#chart36', myChart36);
-    //vegaEmbed('#chart37', myChart37);
+    vegaEmbed('#chart37', myChart37);
     //vegaEmbed('#chart38', myChart38);
     //vegaEmbed('#chart39', myChart39);
     //vegaEmbed('#chart40', myChart40);
