--- a/portfolio.html
+++ b/portfolio.html
@@ -122,7 +122,7 @@
         <h3> Week 9: Advanced Charts </h3>
         <div class="chart" id="chart21"> </div>
         <p> Here are my complex charts.</p>
-        <img src="https://raw.githubusercontent.com/theagegeshidze/theagegeshidze.github.io/main/heatmap.png" alt="Matrix" height = 500px width = 500px/>
+        <img src="https://raw.githubusercontent.com/theagegeshidze/theagegeshidze.github.io/main/heatmapportfolio.png" alt="Matrix" height = 300px width = 300px/>
         <p> they are very very advanced </p>
 
       </div>
