--- a/portfolio.html
+++ b/portfolio.html
@@ -129,8 +129,8 @@
 
       <div class="myWeek10">
         <h3> Week 10/11: Machine Learning </h3>
-        <img src="https://raw.githubusercontent.com/theagegeshidze/theagegeshidze.github.io/main/firstregression.png" alt="Matrix" height = 500px width = 500px/>
-        <img src="https://raw.githubusercontent.com/theagegeshidze/theagegeshidze.github.io/main/scatter.png" alt="Matrix" height = 500px width = 500px/>
+        <img src="https://raw.githubusercontent.com/theagegeshidze/theagegeshidze.github.io/main/regressionportfolio.png" alt="Matrix" height = 300px width = 300px/>
+        <img src="https://raw.githubusercontent.com/theagegeshidze/theagegeshidze.github.io/main/pcaportfolio.png" alt="Matrix" height = 300px width = 300px/>
         <p> Here are my learning machines.</p>
         <p> they are very very advanced </p>
 
