--- a/portfolio.html
+++ b/portfolio.html
@@ -47,8 +47,7 @@
 
         <div id="text">
           <h3> Week 1 :Embedding</h3>
-          <p> Week One saw us setting up our websites and embedding two charts from the rapid charts repository.
-            One is a line graph of UK Labour productivity between 1971 and 2021. The second one shows y. </p>
+          <p> Week One saw us setting up our websites and embedding two charts from the rapid charts repository. One is a line graph of UK Labour productivity between 1971 and 2021. The second one shows y. </p>
 
           <div class="chart" id="chart2"> </div>
           <div class="chart" id="chart1"> </div>
