--- a/project.html
+++ b/project.html
@@ -150,6 +150,7 @@
         </p>
        
        <div class="chart" id="chart37"> </div>
+       <div class="chart" id="chart38"> </div>
 
        </div>
        
@@ -195,7 +196,7 @@
     var myChart35 = "electricitymixpiechart.json";
     var myChart36 = "scrapedweek4.json";
     var myChart37 = "projectstacked.json";
-    //var myChart38 = "BKST.json";
+    var myChart38 = "intensity.json";
     //var myChart39 = "data_ONS-CUDG.json";
     //var myChart40 = "data_ONS-CUKY.json";
     //var myChart41 = "data_ONS-EKED.json";
@@ -213,7 +214,7 @@
     vegaEmbed('#chart35', myChart35);
     vegaEmbed('#chart36', myChart36);
     vegaEmbed('#chart37', myChart37);
-    //vegaEmbed('#chart38', myChart38);
+    vegaEmbed('#chart38', myChart38);
     //vegaEmbed('#chart39', myChart39);
     //vegaEmbed('#chart40', myChart40);
     //vegaEmbed('#chart41', myChart41);
