--- a/project.html
+++ b/project.html
@@ -118,7 +118,7 @@
    <div class="Conclusion">
         <h3>Conclusion</h3>
        
-       <img src="https://raw.githubusercontent.com/theagegeshidze/theagegeshidze.github.io/main/firstregression.png" alt="Matrix" height = 300px width = 300px/>
+       <img src="https://raw.githubusercontent.com/theagegeshidze/theagegeshidze.github.io/main/regressionportfolio.png" alt="Matrix" height = 300px width = 300px/>
         
         <p>Our regression shows that everything improves if we reduce the carbon intensity of electricity, and it is clear through
          our graphs and analysis that both nuclear power and renewables will aid in this result.
