--- a/portfolio.html
+++ b/portfolio.html
@@ -208,7 +208,7 @@
       var myChart17 = "choroplethfixlegend.json"
       var myChart18 = "week8linegraph.json"
       //var myChart19 = "choroplethfixlegend.json"
-      var myChart20 = "week8completed.json"
+      var myChart20 = "festivallowestprice.json"
       var myChart21 = "trellis.json"
       var myChart22 = "africachoropleth.json"
       var myChart23 = "africabasemap.json"
