--- a/portfolio.html
+++ b/portfolio.html
@@ -143,7 +143,7 @@
         <div class="chart" id="chart18"></div>
         <p> In the 'Big Data' talk, Arthur Turrell said that recently the inflation of prices are hitting low cost goods more than general goods.
         I found this really interesting as the implications would be that the poorest would be the most hit by the cost of living crisis. I found
-        a very helpful experimental illness by the Office of National Statistics (Turrell's workplace). My first graph reveals that there is little
+        a very helpful experimental review by the Office of National Statistics (Turrell's workplace). My first graph reveals that there is little
         differentiation between CPIH and lower cost goods over the period. Although there is notable increase in the lowest cost goods, when paired
         with information from our other graph, we can infer that these price increases are probably following a similar trend to all food and drinks,
         even those that aren't low cost. </p>
