--- a/portfolio.html
+++ b/portfolio.html
@@ -185,7 +185,7 @@
         correct data would likely prove helpful in my research project. I performed the regression of low carbon intense energy on CO2 emissions, generated the
         regression graph and exported it. My regression visually shows a positive correlation: higher % of low carbon energy results in decreasing CO2 emissions. However, 
         although my R value is statistically significant, it is not very high, so although there is a correlation, it is important to note the relation with some caution. </p>
-        <p> For the unsupervised learning, I chose to the PCA method. I chose to perform it on a data set that outlined different continents and various characteristics
+        <p> For the unsupervised learning, I chose the PCA method. I chose to perform it on a data set that outlined different continents and various characteristics
         for each of them. I first practiced the PCA process using the iris dataset in python. The dimensionality reduction process allowed me to take a complex
         data set with multiple variables, and convert then into a matrix and figure out the relationships between them, whilst staying considerate of their groups. I then
         plotted this onto a graph, where each colour represents a different group. I changed the axis values so that the plot would be more clear, leaving out 5 data points.</p>
