--- a/project.html
+++ b/project.html
@@ -86,7 +86,7 @@
         <h3>Carbon Emissions</h3>
         <div class="chart" id="chart34"> </div>  
   
-        <p>WBoth options are low in carbon emissions, with wind just overtaking nuclear. 
+        <p>Both options are low in carbon emissions, with wind just overtaking nuclear. 
 
          It is important to note that we looked over these emissions in the long run using 
          lifecycle emissions. Over time the emissions from construction are made up for due 
